<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
                             http://maven.apache.org/xsd/maven-4.0.0.xsd">

  <modelVersion>4.0.0</modelVersion>

  <parent>
    <groupId>org.springframework.boot</groupId>
    <artifactId>spring-boot-starter-parent</artifactId>
    <version>3.2.5</version>
    <relativePath/>
  </parent>

  <groupId>com.phenikaa</groupId>
  <artifactId>phenikaa-thesis-management</artifactId>
  <version>1.0-SNAPSHOT</version>
  <packaging>pom</packaging>

  <modules>
    <module>common-lib</module>
    <module>gateway/api-gateway</module>
    <module>discovery/discovery-server</module>
    <module>config/config-server</module>
    <module>services/user-service</module>
    <module>services/thesis-service</module>
    <module>services/academic-config-service</module>
    <module>services/assign-service</module>
    <module>services/eval-service</module>
    <module>services/communication-log-service</module>
    <module>services/group-service</module>
    <module>services/profile-service</module>
    <module>services/submission-service</module>
    <module>services/auth-service</module>
  </modules>

  <properties>
    <java.version>21</java.version>
    <spring-cloud.version>2023.0.2</spring-cloud.version>
  </properties>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>org.springframework.cloud</groupId>
        <artifactId>spring-cloud-dependencies</artifactId>
        <version>${spring-cloud.version}</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
    </dependencies>
  </dependencyManagement>

</project>
